--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flagcard/authorization",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/flagcard/authorization#readme",
   "dependencies": {
+    "@flagcard/log": "^1.2.1",
     "http-status": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "jwt-simple": "^0.5.6",
     "keycloak-connect": "^6.0.1",
     "mock-require": "^3.0.3",
     "moment": "^2.24.0"
