--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-          scope: '@flagcard'
+          scope: '@dayvisonlemos'
       - run: npm ci
       - run: npm publish
         env:
