--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@flagcard/authorization",
+  "name": "authorization",
   "version": "1.3.1",
-  "description": "",
+  "description": "Authorization",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test node_modules/mocha/bin/_mocha  --recursive ./test/**/*.spec.js",
