--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
-          scope: '@dayvisonlemos'
-      - run: npm ci
-      - run: npm publish
+      - name: Create .npmrc
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        run: echo "//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
+      - run: npm ci
+      - run: npm publish
