--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Create .npmrc
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        run: echo "//npm.pkg.github.com/:_authToken=6706150d6df63789f7cb71e9d0a2bdbca38c8ead" >> ~/.npmrc"
+        run: echo "//npm.pkg.github.com/:_authToken=6706150d6df63789f7cb71e9d0a2bdbca38c8ead >> ~/.npmrc"
       - run: npm ci
       - run: npm publish
