--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -23,6 +23,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+          registry-url: https://npm.pkg.github.com/
+          scope: '@dayvisonlemos'
       - name: Create .npmrc
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
