--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -23,11 +23,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
-          scope: '@dayvisonlemos'
       - name: Create .npmrc
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: echo "//npm.pkg.github.com/:_authToken=6706150d6df63789f7cb71e9d0a2bdbca38c8ead >> ~/.npmrc"
+      - run: npm config set registry https://npm.pkg.github.com/
       - run: npm ci
       - run: npm publish
