--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: Create .npmrc
+          registry-url: https://npm.pkg.github.com/
+          scope: '@dayvisonlemos'
+      - run: npm ci
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        run: echo "//npm.pkg.github.com/:_authToken=6706150d6df63789f7cb71e9d0a2bdbca38c8ead >> ~/.npmrc"
-      - run: npm config set registry https://npm.pkg.github.com/
-      - run: npm publish
