--- a/package.json
+++ b/package.json
@@ -1,41 +1,55 @@
 {
-  "name": "authorization",
-  "version": "1.4.0",
+  "name": "@flagcard/authorization",
+  "version": "2.0.0",
   "description": "Authorization",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "NODE_ENV=test node_modules/mocha/bin/_mocha  --recursive ./test/**/*.spec.js",
-    "lint": "eslint src/** test/** index.js",
-    "lint:fix": "eslint src/** test/** index.js --fix"
+    "build": "tsc --declaration",
+    "test": "NODE_ENV=test jest --config jest.config.json",
+    "test:unit": "jest --coverage --config jest.config.json",
+    "test:watch": "jest --watch --config jest.config.json",
+    "lint": "eslint src/** test/** config/** --ext ts",
+    "lint:fix": "eslint src/** test/** config/** --ext ts --fix",
+    "deploy": "del-cli --force ./dist && npm version patch && npm run build && npm publish"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/flagcard/authorization.git"
   },
-  "author": "",
+  "author": "dayvison.lemos",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/flagcard/authorization/issues"
   },
   "homepage": "https://github.com/flagcard/authorization#readme",
-  "dependencies": {
-    "@flagcard/log": "^1.2.1",
-    "http-status": "^1.3.2",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
-    "keycloak-connect": "^6.0.1",
-    "mock-require": "^3.0.3",
-    "moment": "^2.24.0"
-  },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^6.1.4",
-    "sinon": "^7.3.2"
+    "@types/date-fns": "^2.6.0",
+    "@types/express": "^4.17.6",
+    "@types/http-status": "^1.1.2",
+    "@types/jest": "^26.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/sinon": "^9.0.4",
+    "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "del-cli": "^3.0.1",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.21.2",
+    "jest": "^26.0.1",
+    "sinon": "^9.0.2",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "@flagcard/exception": "^2.0.7",
+    "@flagcard/log": "^2.1.9",
+    "date-fns": "^2.14.0",
+    "date-fns-tz": "^1.0.10",
+    "express": "^4.17.1",
+    "http-status": "^1.4.2",
+    "jsonwebtoken": "^8.5.1"
   }
 }
