--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "NODE_ENV=test jest --config jest.config.json",
     "test:unit": "jest --coverage --config jest.config.json",
     "test:watch": "jest --watch --config jest.config.json",
-    "lint": "eslint src/** test/** config/** --ext ts",
-    "lint:fix": "eslint src/** test/** config/** --ext ts --fix",
+    "lint": "eslint src/** test/** --ext ts",
+    "lint:fix": "eslint src/** test/** --ext ts --fix",
     "deploy": "del-cli --force ./dist && npm version patch && npm run build && npm publish"
   },
   "repository": {
